deploy/k8s/apps/indexer/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: indexer-netpol
spec:
  endpointSelector:
    matchLabels:
      app: indexer
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        app: qdrant
        io.kubernetes.pod.namespace: rag-platform
    toPorts:
    - ports:
      - port: "6333"
        protocol: TCP
      - port: "6334"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: tei-embeddings
        io.kubernetes.pod.namespace: rag-platform
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toFQDNs:
    - matchPattern: "*.sqs.*.amazonaws.com"
    - matchPattern: "sqs.*.amazonaws.com"
    - matchPattern: "huggingface.co"
    - matchPattern: "*.huggingface.co"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toCIDR:
    - 169.254.170.23/32
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
